syntax = "proto3";

package aperture.watchdog.v1;

import "google/protobuf/duration.proto";

message HeapResult {
  uint64 limit = 1;
  uint64 heap_marked = 2;
  uint64 threshold = 3;
  int32 curr_gogc = 4;
  int32 original_gogc = 5;
  uint64 total_alloc = 6;
  uint64 sys = 7;
  uint64 mallocs = 8;
  uint64 frees = 9;
  uint64 heap_alloc = 10;
  uint64 heap_sys = 11;
  uint64 heap_idle = 12;
  uint64 heap_inuse = 13;
  uint64 heap_released = 14;
  uint64 heap_objects = 15;
  uint64 next_gc = 16;
  uint64 last_gc = 17;
  uint64 pause_total_ns = 18;
  uint32 num_gc = 19;
  uint32 num_forced_gc = 20;
}

message WatchdogResult {
  uint64 total = 1;
  uint64 used = 2;
  uint64 threshold = 3;
  google.protobuf.Duration force_gc_took = 4;
}
